--- a/vite2+vue3.2/package.json
+++ b/vite2+vue3.2/package.json
@@ -19,6 +19,8 @@
 		"@vitejs/plugin-vue": "^1.9.3",
 		"naive-ui": "^2.19.11",
 		"typescript": "^4.4.3",
+		"unplugin-auto-import": "^0.6.6",
+		"unplugin-vue-components": "^0.18.5",
 		"vite": "^2.6.4",
 		"vite-plugin-style-import": "^1.2.1",
 		"vue-tsc": "^0.3.0"
